--- a/src/i18n/HomeScreen/nl.json
+++ b/src/i18n/HomeScreen/nl.json
@@ -1,19 +1,68 @@
 {
   "title": "Welkom bij PFSLive",
-  "subtitle": "Live Trail Race Tracking",
-  "tagline": "Kies hoe u de app wilt gebruiken",
+  "subtitle": "LIVE TRACKING & RESULTATEN",
+  "tagline": "DEEL UW RACE OF TRAINING MET UW VRIENDEN EN FAMILIE",
+  "subtext": "Live Resultaten",
   "participant": {
-    "title": "Ik ben Deelnemer",
-    "description": "Volg en deel uw race voortgang in realtime",
+    "title": "Live Tracking",
+    "description": "Volg en deel uw race voortgang in real-time",
     "button": "Doorgaan als Deelnemer"
   },
-  "follower": {
-    "title": "Ik ben Volger",
-    "description": "Volg uw favoriete lopers en hun voortgang",
-    "button": "Doorgaan als Volger"
+  "Event": {
+    "title": "Evenement Naam",
+    "Date": "Datum",
+    "description": "U kunt uw live tracking 1 uur voor uw start beginnen. Zorg ervoor dat u deze app de hele tijd open houdt en sluit deze niet!",
+    "button": "STOP TRACKING",
+    "buttonText": "START TRACKING"
+  },
+  "button": {
+    "Participant": "IK BEN EEN DEELNEMER",
+    "Fan": "IK BEN EEN FAN"
   },
   "footer": {
     "version": "Versie {{version}}",
     "language": "Taal"
+  },
+  "tracking": {
+    "gpsActivated": "GPS Geactiveerd",
+    "gpsStopped": "GPS Gestopt",
+    "trackingStopped": "Tracking gestopt. Verzonden: {{sent}}, In wachtrij: {{queued}}",
+    "raceStarted": "Race Gestart!",
+    "nowSending": "Nu uw locatiegegevens verzenden.",
+    "queueProcessed": "Wachtrij Verwerkt",
+    "queuedSent": "{{count}} locaties in wachtrij verzonden",
+    "manualStart": "Handmatige Start",
+    "manualStartMessage": "Nu locatiegegevens verzenden.",
+    "waitingForRace": "GPS geactiveerd. Gegevens worden verzonden wanneer de race start om {{time}}",
+    "waitingForRaceNoTime": "GPS geactiveerd. Gegevens worden verzonden wanneer de race start.",
+    "manualStartEnabled": "GPS geactiveerd. Onmiddellijk gegevens verzenden (handmatige start ingeschakeld)."
+  },
+  "status": {
+    "sendingData": "Gegevens Verzenden",
+    "gpsActive": "GPS Actief",
+    "raceStartsIn": "Race start over: {{time}}",
+    "manualStartReady": "Handmatige start ingeschakeld - klaar om te verzenden",
+    "waitingForRace": "Wachten op race...",
+    "sent": "Verzonden",
+    "queued": "In wachtrij",
+    "interval": "Interval",
+    "manualStartEnabled": "Handmatige Start Ingeschakeld",
+    "manualStartDescription": "Gegevens worden onmiddellijk verzonden wanneer tracking start",
+    "waitingForData": "WACHTEN OP GEGEVENS..."
+  },
+  "errors": {
+    "missingInfo": "Ontbrekende Informatie",
+    "missingInfoDescription": "Deelnemer of Evenement ID niet gevonden. Vernieuw en probeer opnieuw.",
+    "permissionRequired": "Toestemming Vereist",
+    "permissionDescription": "Locatietoestemming is vereist om uw positie te volgen.",
+    "gpsError": "GPS Fout",
+    "gpsErrorDescription": "Kan GPS-locatie niet verkrijgen. Controleer of locatieservices zijn ingeschakeld.",
+    "trackingFailed": "Kan GPS-tracking niet starten."
+  },
+  "alerts": {
+    "overrideTitle": "Racetijd Overschrijven",
+    "overrideMessage": "Nu locatiegegevens verzenden? Dit overschrijft de geplande starttijd van de race.",
+    "cancel": "Annuleren",
+    "startNow": "Nu Starten"
   }
 }
