--- a/src/i18n/ParticipantEvent/en.json
+++ b/src/i18n/ParticipantEvent/en.json
@@ -17,14 +17,17 @@
     "description": "Racing and event or planning a training session that is not an official partner event? Create it here!",
     "button": "CREATE PERSONAL EVENT"
   },
-  
+
+
   "details": {
     "Distance": "Distance",
     "Participant": "Participant"
 },
 "countdown": {
     "in_progress": "Live",
-    "finished": "Finished"
+    "finished": "Finished",
+    "hours":"START",
+    "days":"START"
 },
 "distance": {
     "empty": "No distances available"
