--- a/src/i18n/common/en.json
+++ b/src/i18n/common/en.json
@@ -32,5 +32,19 @@
     "please_wait": "Please wait...",
     "loading": "Loading...",
     "processing": "Processing..."
+  },
+  "months": {
+    "january": "January",
+    "february": "February",
+    "march": "March",
+    "april": "April",
+    "may": "May",
+    "june": "June",
+    "july": "July",
+    "august": "August",
+    "september": "September",
+    "october": "October",
+    "november": "November",
+    "december": "December"
   }
 }
