--- a/src/i18n/common/fr.json
+++ b/src/i18n/common/fr.json
@@ -32,5 +32,19 @@
     "please_wait": "Veuillez patienter...",
     "loading": "Chargement...",
     "processing": "Traitement..."
+  },
+  "months": {
+    "january": "janvier",
+    "february": "février",
+    "march": "mars",
+    "april": "avril",
+    "may": "mai",
+    "june": "juin",
+    "july": "juillet",
+    "august": "août",
+    "september": "septembre",
+    "october": "octobre",
+    "november": "novembre",
+    "december": "décembre"
   }
 }
