--- a/src/i18n/common/nl.json
+++ b/src/i18n/common/nl.json
@@ -32,5 +32,19 @@
     "please_wait": "Een moment geduld...",
     "loading": "Laden...",
     "processing": "Verwerken..."
+  },
+  "months": {
+    "january": "januari",
+    "february": "februari",
+    "march": "maart",
+    "april": "april",
+    "may": "mei",
+    "june": "juni",
+    "july": "juli",
+    "august": "augustus",
+    "september": "september",
+    "october": "oktober",
+    "november": "november",
+    "december": "december"
   }
 }
