added participant event screen

--- a/src/i18n/ParticipantEvent/en.json
+++ b/src/i18n/ParticipantEvent/en.json
@@ -33,6 +33,7 @@
     "empty": "No distances available"
 },
 "participant": {
-    "empty": "No participants yet"
+    "empty": "No participants yet",
+    "search":"Search"
 }
 }
