add condition on distab tab and alwa vallidation  and check toke accoording to navigate the page

--- a/src/i18n/EventDetails/en.json
+++ b/src/i18n/EventDetails/en.json
@@ -4,6 +4,7 @@
     "Participant": "Participant"
   },
   "button": "SIGN UP LIVE TRACKING",
+  "undo":"UNDO FOR SIGNUP",
   "live": "LIVE",
   "countdown": {
     "in_progress": "Live",
