--- a/src/i18n/RegisterScreen/en.json
+++ b/src/i18n/RegisterScreen/en.json
@@ -6,6 +6,8 @@
   "country": "Country",
   "city": "City",
   "dateOfBirth": "Date of Birth",
+  "account":"Already have an account ?",
+  "loginNow":"Login Now",
   "Gender": {
     "gender": "Gender",
     "male": "Male",
