--- a/src/i18n/common/en.json
+++ b/src/i18n/common/en.json
@@ -46,5 +46,12 @@
     "october": "October",
     "november": "November",
     "december": "December"
+  },
+  "update": {
+    "currentVersion": "Current Version",
+    "latestVersion": "Latest Version",
+    "updateNow": "UPDATE NOW",
+    "later": "Later",
+    "forcedMessage": "You must update to continue using the app"
   }
 }
