--- a/src/i18n/common/fr.json
+++ b/src/i18n/common/fr.json
@@ -46,5 +46,12 @@
     "october": "octobre",
     "november": "novembre",
     "december": "décembre"
+  },
+  "update": {
+    "currentVersion": "Version Actuelle",
+    "latestVersion": "Dernière Version",
+    "updateNow": "METTRE À JOUR",
+    "later": "Plus Tard",
+    "forcedMessage": "Vous devez mettre à jour pour continuer à utiliser l'application"
   }
 }
