--- a/src/i18n/common/nl.json
+++ b/src/i18n/common/nl.json
@@ -46,5 +46,12 @@
     "october": "oktober",
     "november": "november",
     "december": "december"
+  },
+  "update": {
+    "currentVersion": "Huidige Versie",
+    "latestVersion": "Nieuwste Versie",
+    "updateNow": "NU UPDATEN",
+    "later": "Later",
+    "forcedMessage": "U moet updaten om de app te blijven gebruiken"
   }
 }
